--- a/MatekFeladatok.ipynb
+++ b/MatekFeladatok.ipynb
@@ -111,17 +111,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Megoldások"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='SZT_PM'> Számok a táblán </a>\n"
+    "## Számok a táblán\n",
+    "<a id='SZT_M'> </a>\n"
    ]
   },
   {
