--- a/MatekFeladatok.ipynb
+++ b/MatekFeladatok.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Források:\n",
     "\n",
-    "[budapesti Fazék](https://matkonyv.fazekas.hu/index.html)\n",
+    "[budapesti Fazék](https://matkonyv.fazekas.hu/index.html)<br>\n",
+    "[xxx](http://courses.mai.liu.se/GU/TATA64/Document/ExercisesInGraphTheory2017.pdf)<br>\n",
+    "[yyy](http://tamop412a.ttk.pte.hu/files/Kombinatorika_kesz_jav3_final.pdf)\n",
     "\n",
     "1. S = segítség\n",
     "1. P = programozás"
