--- a/MatekFeladatok.ipynb
+++ b/MatekFeladatok.ipynb
@@ -856,7 +856,7 @@
    "source": [
     "<a id='CIRC1_M'></a>\n",
     "### Körök 1\n",
-    "1. Induljunk ki egy $v_1$ csúcsból és mindig próbáljunk meg még nem látogatott csúcsba menni, ha ez sikerül akkor $\\delta(G)\\ge 2$ miatt tobább tudunk menni, ha   $v_1 \\to v_2 \\to \\ldots$\n",
+    "1. Induljunk ki egy csúcsból és mindig próbáljunk meg még nem látogatott csúcsba menni, ha ez sikerül akkor $\\delta(G)\\ge 2$ miatt tobább tudunk menni, ha   $v_1 \\to v_2 \\to \\ldots$\n",
     "Ha $N_G(v)\\cap N_G(w)=\\emptyset$, akkor $n\\ge N_G(v)+N_G(w)+2>n$ lenne, ami lehetetlen.\n",
     "<br>\n",
     "\n",
