--- a/GrafFeladatok.ipynb
+++ b/GrafFeladatok.ipynb
@@ -26,6 +26,7 @@
     "1. $\\delta(G)$ a minimális fokszám $G$-ben\n",
     "1. $\\Delta(G)$ a maximális fokszám $G$-ben\n",
     "1. $N_G(v)$ a $G$-beli $v$ csúcs szomszédainak halmaza\n",
+    "1. $d(v)=|N_G(v)|$: fokszám\n",
     "   "
    ]
   },
@@ -34,6 +35,17 @@
    "metadata": {},
    "source": [
     "## Feladatok"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='FOK0'></a>\n",
+    "### Fokszámok és élek\n",
+    "$\\sum_{v\\in V}d_v=2|E|$\n",
+    "<br>\n",
+    "[megoldás](#FOK0_M)"
    ]
   },
   {
@@ -89,7 +101,7 @@
    "source": [
     "<a id='CON1'></a>\n",
     "### Összefüggőség és komplementer\n",
-    "Gondoljuk át a következőt: ha $G$ nem összefüggő, akkor $G^c$ összefüggő.<br>\n",
+    "Ha $G$ nem összefüggő, akkor $G^c$ összefüggő.<br>\n",
     "Másszóval: egy gráf vagy a komplementere összefüggő.\n",
     "<br>\n",
     "[megoldás](#CON1_M)"
@@ -144,7 +156,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='TREE1'></a>\n",
+    "### Fák\n",
+    "Egy $n$ pontú összefüggő gráf pont akkor fa ha $n-1$ éle van.\n",
+    "<br>\n",
+    "\n",
+    "[megoldás](#TREE1_M)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Megoldások"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='FOK0_M'> </a>\n",
+    "### Fokszámok és élek\n",
+    "A baloldalon minden élet kétszer veszünk figyelembe.(A formula\n",
+    "nem csak egyszerű gráfban érvényes)\n",
+    "<br>\n",
+    "[vissza a feladathoz](#FOK0)\n"
    ]
   },
   {
@@ -281,6 +317,21 @@
     "\n",
     "\n",
     "[vissza a feladathoz](#CIRC1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='TREE1_M'></a>\n",
+    "### Fák\n",
+    "Tfh. $G$ fa $n>1$ csúccsal. Távolítsuk el egy elsőfokú pontját és a rá illeszkedő élt. Ami marad: fa. Ezt $n-1$-szer ismételve \n",
+    "egy pontra zsugorodik a fánk.<br>\n",
+    "\n",
+    "Tfh. $G$ éleinek száma $n-1$. Tekintsük egy körét ha van. Ha eltávolítjuk a kör egy élét az összefüggőség nem sérül. (a kör maradék élei átveszik a kidobott él szerepét) Ha ezt $k$-szor kellett ismételni, akkor egy $n$ csúcsú $n-1-k$ élű fát látunk, ami az előző miatt csak $k=0$-nál lehet.\n",
+    "\n",
+    "\n",
+    "[vissza a feladathoz](#TREE1)"
    ]
   },
   {
