--- a/GrafFeladatok0.ipynb
+++ b/GrafFeladatok0.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feladatok\n",
-    "\n",
     "## Jelölések, fogalmak\n",
     "1. [Egyszerű](http://mathworld.wolfram.com/SimpleGraph.html) gráf:<br> \n",
     "    irányítatlan, súlyozatlan, hurok és többszörös élektől mentes.<br>\n",
     "    Gráfon ilyen gráfot értünk - hacsak mást nem mondunk.\n",
-    "1. $G=(V,E)$: $V$ a csúcsok halmaza, $E$ pedig éleké.    \n",
+    "1. $G=(V,E)$: $V$ a csúcsok halmaza, $E$ pedig éleké, ami itt $\\{v,w\\}$ alakú halmazok halmaza $v,w\\in V,\\ v\\neq w$.    \n",
     "1.  \n",
     "    - walk,trail,path,circle\n",
     "    - az $v,w$ csúcsok **szomszédosak** ha $\\{v,w\\}$ éle a gráfnak.\n",
@@ -25,8 +23,8 @@
     "    - **fa**: ha összefüggő és körmentes.\n",
     "1. $\\delta(G)$ a minimális fokszám $G$-ben\n",
     "1. $\\Delta(G)$ a maximális fokszám $G$-ben\n",
-    "1. $N_G(v)$ a $G$-beli $v$ csúcs szomszédainak halmaza\n",
-    "1. $d(v)=|N_G(v)|$: fokszám\n",
+    "1. $N_G(v)$ a $G$-beli $v$ csúcs szomszédainak halmaza, ha nem okoz félreértést röviden $N(v)$.\n",
+    "1. $d_G(v)=|N_G(v)|$ a $v$ csúcs fokszáma, ha nem okoz félreértést röviden $d(v)$ vagy $d_v$.\n",
     "   "
    ]
   },
@@ -63,24 +61,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='FOK2'></a>\n",
-    "### Egyforma fokszámok 2\n",
-    "1. Konstruáljunk minden $n>1$-re olyan gráfot, melyben **pontosan egy** csúcspárnak egyforma a fokszáma.<br>\n",
-    "[megoldás](#FOK2_M)\n",
-    "1. Kis $n$-ekre ($<20$) generáljunk véletlen gráfot a következőképpen: <br> \n",
-    "   rögzítsünk egy $0<p<1$ számot, vegyük sorra a *lehetséges* éleket, melyeket $p$ valószínűséggel    vegyünk hozzá a gráfhoz.<br> Hány egyforma fokú csúcspárra számíthatunk? (+) <br>\n",
-    "[megoldás](fok2.2.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='FOK3'></a>\n",
     "### Elsőfokú csúcsok\n",
-    "Legyen $G$ egy körmentes gráf, melyre $E\\neq\\emptyset$.\n",
-    "1. $G$-ben van $2$ elsőfokú csúcs.\n",
-    "1. $G$-ben van $\\Delta(G)$ elsőfokú csúcs.<br>\n",
+    "Ha $G$ egy körmentes gráf, melyre $E\\neq\\emptyset$, akkor \n",
+    "$G$-ben van $2$ elsőfokú csúcs.<br>\n",
     "[megoldás](#FOK3_M)"
    ]
   },
@@ -200,33 +184,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='FOK2_M'> </a>\n",
-    "### Egyforma fokszámok 2\n",
-    "Olyan $n$ csúcsu gráfokat generálunk egymásra épülve melyekben van $1$ izolált pont és nincs telített pont,<br>\n",
-    "azaz a maximális fokszám legfeljebb $n-2$. Az ilyen gráfokat *jó*nak nevezzük.\n",
-    "1. $n=2$: $2$ izolált csúcs.\n",
-    "1. $n=3$: $1$ izolált és $2$ összekötött csúcs.\n",
-    "1. tegyük fel, hogy már van $n<k$-ra *jó* gráfunk. Vegyünk fel $1$ izolált pontot, egy $k-2$ csúcsu \n",
-    "   *jó* gráfot <br>és egy csúcsot, melyet a $k-2$-es *jó* gráf minden csúcsával összekötünk. \n",
-    "   A létrejött $k$-as gráf *jó*.\n",
-    "\n",
-    "[vissza a feladathoz](#FOK2)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='FOK3_M'> </a>\n",
     "### Elsőfokú csúcsok\n",
-    "1. Tekintsünk egy $L=v_1,\\ldots,v_d$ leghosszabb utat $G$-ben.\n",
-    "   Ha $v_1$ nem elsőfokú, akkor van egy $v$ szomszédja, \n",
-    "   melyre $v\\neq v_2$. A körmentesség \n",
-    "   miatt $v\\neq v_3,\\ldots,v_d$ is fennáll. Vagyis $L$  nem leghosszabb út.<br>\n",
-    "1. Legyen $w_0$ egy $d=\\Delta(G)>1$ fokszámú pont és és $w_1$ egy szomszédja. A már meglevő $w_0,w_1,\\ldots,w_k$ utat bővítsük ha lehet. Bővítés alatt azt értjük, hogy számba vesszük $w_k$ szomszédait, ha $1$ van megállunk, ha több is van \n",
-    "   választunk egy $w_{k-1}$-től különbözőt, ez az új szomszéd nem lehet az eddigi útnak eleme a körmentesség miatt. \n",
-    "\n",
+    "Tekintsünk egy $L=v_1,\\ldots,v_d$ leghosszabb utat $G$-ben.\n",
+    "Ha $v_1$ nem elsőfokú, akkor van egy $v$ szomszédja, melyre $v\\neq v_2$. <br>\n",
+    "A körmentesség miatt $v\\neq v_3,\\ldots,v_d$ is fennáll. Vagyis $L$  nem leghosszabb út.<br>\n",
     "[vissza a feladathoz](#FOK3)\n"
    ]
   },
@@ -254,69 +216,6 @@
     "### Összefüggőség és komplementer\n",
     "$G$ csúcsait két nemüres $G_1,G_2$ részre bonthatjuk. $G^c$-ben az összes $G_1$ és $G_2$ közt haladó él benne van.<br> Ezért nemcsak, hogy összefüggő a $G^c$, hanem bármely két pontja legfeljebb $2$ távolságra van.<br>\n",
     "[vissza a feladathoz](#CON1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CON2_M'></a>\n",
-    "### Összefüggőség és fokszámok 1\n",
-    "1. Ha $v\\neq w$ akkor $N_G(v)\\cap N_G(w)\\neq\\emptyset$, hiszen egyébként $n\\ge 2\\lfloor\\frac{n}{2}\\rfloor+2>n$ lenne.<br>\n",
-    "Ezért bármely két csúcs között legfeljebb $2$ hosszú út vezet.\n",
-    "1. Képzeljunk el egy $6$ pontú két diszjunkt $\\triangle$-ből álló gráfot.\n",
-    "<br>\n",
-    "\n",
-    "[vissza a feladathoz](#CON2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CON3_M'></a>\n",
-    "### Összefüggőség és fokszámok 2\n",
-    "Ha $N_G(v)\\cap N_G(w)=\\emptyset$, akkor $n\\ge N_G(v)+N_G(w)+2>n$ lenne, ami lehetetlen.\n",
-    "<br>\n",
-    "\n",
-    "[vissza a feladathoz](#CON3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='PATH1_M'></a>\n",
-    "### Utak és fokszámok\n",
-    "Legyen $d=\\delta(G)>0$. Ha $d=0$ vagy $1$ az állítás triviális. \n",
-    "<br>\n",
-    "Azt látjuk be hogy tetszőleges $v$ csúcsból indul $d$ hosszú út. Legyen $v=v_1,v_2$ a keresett út eleje.\n",
-    "<br> \n",
-    "Mikor bővíthetünk biztosan egy $k\\ge 1$ hosszú $v_1,\\ldots,v_{k+1}$ utat? \n",
-    "Ha $v_{k+1}$ fokszámát még nem használtuk el, <br>azaz $k<d$, hiszen ekkor van olyan $v_{k+1}$ szomszéd mely nem szerepel az útban. \n",
-    "<br>\n",
-    "Ezért valamilyen $d$-hosszú $v_1,v_2,\\ldots,v_{d+1}$ út mindig létezik.\n",
-    "<br>\n",
-    "[vissza a feladathoz](#PATH1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CIRC1_M'></a>\n",
-    "### Körök és fokszámok\n",
-    "Legyen $d=\\delta(G)>1$. Bármely pont rajta van egy $d+1$ hosszú körön.<br>\n",
-    "Legyen $v_1$ egy csúcs, a [PATH1](#PATH1) miatt van egy $d$-hosszú, \n",
-    "$v_1,v_2,\\ldots,v_{d+1}$ utunk. \n",
-    "<br>\n",
-    "Ezt bővítsük még amíg lehetséges egy $v_1,v_2,\\ldots,v_{k+1}$ útra. A $v_{k+1}$ $d$ szomszédja a $v_1,\\ldots,v_k$-k közül való. \n",
-    "<br>\n",
-    "A legkisebb indexű $v_i$-t választva kapunk egy \n",
-    "$v_i,v_{i+1},\\ldots,v_{k+1},v_{i}$ *legalább* $d+1$ hosszú kört.\n",
-    "\n",
-    "\n",
-    "[vissza a feladathoz](#CIRC1)"
    ]
   },
   {
@@ -355,19 +254,19 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "7642b0e010204b5b82a743ddea745b21",
-   "lastKernelId": "5e58ecb7-2bff-4bf7-9314-a444f8a8d002"
+   "lastCommId": "e10fb4e7121346cab2ecabc8b944c18e",
+   "lastKernelId": "b0dcfed8-4c85-4056-ad62-667e47a8e511"
   },
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.0.0",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.0.0"
   },
   "toc": {
    "base_numbering": 1,
