--- a/fok2.2.ipynb
+++ b/fok2.2.ipynb
@@ -43,16 +43,20 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "a6de2a8890304274ab776b645c92b072",
+   "lastKernelId": "b60b542f-1725-44ef-a265-1e2df2f3a1ab"
+  },
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.0.0",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.0.0"
   },
   "toc": {
    "base_numbering": 1,
