--- a/GrafFeladatok0.ipynb
+++ b/GrafFeladatok0.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feladatok"
+    "## Feladatok L0"
    ]
   },
   {
@@ -89,51 +89,6 @@
     "Másszóval: egy gráf vagy a komplementere összefüggő.\n",
     "<br>\n",
     "[megoldás](#CON1_M)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CON2'></a>\n",
-    "### Összefüggőség és fokszámok 1\n",
-    "1. Ha $\\delta(G)\\ge\\lfloor \\frac{n}{2}\\rfloor$ akkor $G$ összefüggő.\n",
-    "1. Adjunk példát olyan **nem-összefüggő** $G$-re, melyre \n",
-    "   $\\delta(G)=\\lfloor \\frac{n}{2}\\rfloor-1$.<br>\n",
-    "[megoldás](#CON2_M)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CON3'></a>\n",
-    "### Összefüggőség és fokszámok 2\n",
-    "Ha $N_G(w)+N_G(w)+1\\ge n$ bármely $v\\neq w$-re akkor $G$ összefüggő.<br>\n",
-    "[megoldás](#CON3_M)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='PATH1'></a>\n",
-    "### Utak és fokszámok\n",
-    "$G$-ben van $\\delta(G)$ hosszú út.\n",
-    "<br>\n",
-    "[megoldás](#PATH1_M)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='CIRC1'></a>\n",
-    "### Körök és fokszámok\n",
-    "Ha $\\delta(G)>1$ akkor $G$-ben van $\\delta(G)+1$ hosszú kör.\n",
-    "<br>\n",
-    "\n",
-    "[megoldás](#CIRC1_M)"
    ]
   },
   {
@@ -258,15 +213,15 @@
    "lastKernelId": "b0dcfed8-4c85-4056-ad62-667e47a8e511"
   },
   "kernelspec": {
-   "display_name": "Julia 1.0.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.0"
+   "version": "1.1.1"
   },
   "toc": {
    "base_numbering": 1,
