--- a/GrafFeladatok1.ipynb
+++ b/GrafFeladatok1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feladatok"
+    "## Feladatok L2"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "Azt látjuk be hogy tetszőleges $v$ csúcsból indul $d$ hosszú út. Legyen $v=v_1,v_2$ a keresett út eleje.\n",
     "<br> \n",
     "Mikor bővíthetünk biztosan egy $k\\ge 1$ hosszú $v_1,\\ldots,v_{k+1}$ utat? \n",
-    "Ha $v_{k+1}$ fokszámát még nem használtuk el, <br>azaz $k<d$, hiszen ekkor van olyan $v_{k+1}$ szomszéd mely nem szerepel az útban. \n",
+    "Ha $v_{k+1}$ fokszámát az út prefixe nem tudja \"felhasználni\", <br>azaz $k<d$, hiszen ekkor van olyan $v_{k+1}$ szomszéd mely nem szerepel az útban. \n",
     "<br>\n",
     "Ezért valamilyen $d$-hosszú $v_1,v_2,\\ldots,v_{d+1}$ út mindig létezik.\n",
     "<br>\n",
@@ -220,15 +220,15 @@
    "lastKernelId": "522c8107-ce20-430f-9efc-3a76a739e2fa"
   },
   "kernelspec": {
-   "display_name": "Julia 1.0.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.0"
+   "version": "1.1.1"
   },
   "toc": {
    "base_numbering": 1,
