--- a/graph-coloring-with-networkx/project_A.ipynb
+++ b/graph-coloring-with-networkx/project_A.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "## project_A\n",
-    "\n",
-    "### remake of [https://towardsdatascience.com/graph-coloring-with-networkx](https://towardsdatascience.com/graph-coloring-with-networkx-88c45f09b8f4) in julia"
+    "* remake of [https://towardsdatascience.com/graph-coloring-with-networkx](https://towardsdatascience.com/graph-coloring-with-networkx-88c45f09b8f4) in julia\n",
+    "* basic Graph.jl usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "weird-democrat",
    "metadata": {},
    "outputs": [
@@ -20,10 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Asztal/git/kicsikecske/notebook/graph-coloring-with-networkx`\n",
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
-      "\u001b[32m  ✓ \u001b[39mStatsBase\n",
-      "  1 dependency successfully precompiled in 2 seconds. 53 already precompiled.\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Asztal/git/notebooks/graph-coloring-with-networkx`\n"
      ]
     }
    ],
