--- a/graph-coloring-with-networkx/project_B.ipynb
+++ b/graph-coloring-with-networkx/project_B.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "## project_B\n",
-    "\n",
-    "### continuation of [project_A](project_A.ipynb)\n",
+    "* continuation of [project_A](project_A.ipynb)\n",
     "* the graph is 9-colorable, it would be interesting to \n",
     "  know that 8 or less color is enough or not.\n",
     "* for this purpose, we develop (actually i wrote it for a codesignal interview question...) a simple function in julia, that can be used to compute the chromatic number."
@@ -41,9 +40,7 @@
    "execution_count": 26,
    "id": "vertical-access",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -58,7 +55,7 @@
     }
    ],
    "source": [
-    "# reading and manipulating as before\n",
+    "# reading and manipulating as in project_A:\n",
     "d0,h0=readdlm(\n",
     "  \"synthetic_school_enrollment_data.csv\",','; \n",
     "  header=true\n",
@@ -123,8 +120,8 @@
    ],
    "source": [
     "# the backtracking solution\n",
-    "# actually it is a very naive implementation \n",
-    "# w/o any sophistication\n",
+    "# it is a naive implementation w/o any smartness,\n",
+    "# just administration\n",
     "\n",
     "function graph_col_bt(G::Vector{Vector{Int}},maxcol::Int) # max number of colors\n",
     "# the actual color are in 1..maxcol\n",
@@ -182,7 +179,7 @@
     "end\n",
     "\n",
     "\n",
-    "# a variant that takes a Graph() instance and returns a similar\n",
+    "# a method (variant) that takes a Graph() instance and returns a similar\n",
     "# object that is returned by Graphs.random_greedy_color\n",
     "# (imitating by namedtuple)\n",
     "function graph_col_bt(G::Graph,maxcol::Int) # max number of colors\n",
@@ -204,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "entitled-diving",
+   "id": "pregnant-craft",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "id": "hearing-conducting",
    "metadata": {
     "scrolled": true
@@ -274,15 +271,16 @@
        "\u001b[36m                                                               3 columns omitted\u001b[0m"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we need maxcolsize rooms\n",
-    "cm=the_coloring.colors|>countmap\n",
-    "mincolsize,maxcolsize=extrema(nc for (c,nc) in cm)\n",
+    "mincolsize,maxcolsize=extrema(\n",
+    "  nc for (c,nc) in the_coloring.colors|>countmap\n",
+    ")\n",
     "\n",
     "\n",
     "# build the final table\n",
@@ -304,12 +302,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-logging",
+   "id": "together-anger",
    "metadata": {},
    "source": [
     "#### Conclusion\n",
     "* for this graph instance *this* backtracking solution is very slow, \n",
-    "  but after executing it we can be sure that fewer than 9 colors is not enough."
+    "  but after executing it we can be sure that fewer than 9 colors (exam dates) is not enough."
    ]
   }
  ],
