--- a/graph-coloring-with-networkx/part_B.ipynb
+++ b/graph-coloring-with-networkx/part_B.ipynb
@@ -5,8 +5,8 @@
    "id": "billion-stupid",
    "metadata": {},
    "source": [
-    "## project_B\n",
-    "* continuation of [project_A](project_A.ipynb)\n",
+    "## part_B\n",
+    "* continuation of [part_A](part_A.ipynb)\n",
     "* the graph is 9-colorable, it would be interesting to \n",
     "  know that 8 or less color is enough or not.\n",
     "* for this purpose, we develop (actually i wrote it for a codesignal interview question...) a simple function in julia, that can be used to compute the chromatic number."
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "pregnant-craft",
+   "id": "subjective-bowling",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-anger",
+   "id": "foster-proposal",
    "metadata": {},
    "source": [
     "#### Conclusion\n",
