loadgraph dimacs col

--- a/graphcol-bt/part_A.ipynb
+++ b/graphcol-bt/part_A.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "threaded-tomato",
+   "id": "foster-investing",
    "metadata": {},
    "source": [
     "### part_A\n",
-    "* separate loadgraph for dimacs col format\n"
+    "* separate loadgraph for dimacs col format\n",
+    "* the data is from https://mat.gsia.cmu.edu/COLOR/instances.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "democratic-feeding",
+   "id": "lyric-parks",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "artificial-dover",
+   "id": "professional-blood",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "balanced-aurora",
+   "id": "fabulous-donna",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "actual-proposal",
+   "id": "velvet-evening",
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1845,7 @@
     }
    ],
    "source": [
-    "# this file does not conform the specication -> \n",
+    "# this file does not conform the specification -> \n",
     "# each edge appears twice\n",
     "G=loadgraph(\"col-instances/queen5_5.col\"; format=\"dcol\")\n",
     "println(nv(G),\" \",ne(G))\n",
