--- a/graph-coloring-with-networkx/project_A.ipynb
+++ b/graph-coloring-with-networkx/project_A.ipynb
@@ -5,7 +5,9 @@
    "id": "billion-stupid",
    "metadata": {},
    "source": [
-    "## part_A"
+    "## project_A\n",
+    "* remake of [https://towardsdatascience.com/graph-coloring-with-networkx](https://towardsdatascience.com/graph-coloring-with-networkx-88c45f09b8f4) in julia\n",
+    "* basic Graph.jl usage"
    ]
   },
   {
@@ -4463,19 +4465,6 @@
     "  vcat(\"Exam\",\"Room-\".*string.(1:maxcolsize)))\n",
     "\n",
     "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "declared-paragraph",
-   "metadata": {},
-   "source": [
-    "#### Note\n",
-    "* inspecting the data and the result in the original tutorial \n",
-    "more closely one can found that the \n",
-    "2021-06-15 18:00 Bioinformatics and Data Science exams share a student, \n",
-    "namely Katrina Scott (Computer Science major/no minor). So, \n",
-    "the tutorial's program has some error (which explains why we see different number of edges in the graph `G`)"
    ]
   }
  ],
