--- a/graphcol-bt/part_A.ipynb
+++ b/graphcol-bt/part_A.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "### part_A\n",
     "* separate graph loader for dimacs col format: `loadcol`\n",
-    "* the data is from https://mat.gsia.cmu.edu/COLOR/instances.html\n",
+    "* the data is from https://mat.gsia.cmu.edu/COLOR/instances.html \n",
+    "  (Michael Trick's page)\n",
     "* dimacs is an old/simple quasy file format described [here](https://mat.gsia.cmu.edu/COLOR/general/ccformat.ps) or [here](ccformat.ps)"
    ]
   },
@@ -92,12 +93,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optional-daisy",
+   "id": "smart-cache",
    "metadata": {},
    "source": [
     "#### perform some tests\n",
     "* how effective is `Graphs.random_greedy_color`?\n",
-    "* on the site the optimal number of colors are also reported (except for some cases): `mincol`"
+    "* on Trick's site the optimal number of colors are also reported (except for some cases): `mincol`"
    ]
   },
   {
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "danish-chancellor",
+   "id": "provincial-qualification",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-building",
+   "id": "peripheral-quantity",
    "metadata": {},
    "source": [
     "#### conclusion\n",
