--- a/graph-coloring-with-networkx/part_B.ipynb
+++ b/graph-coloring-with-networkx/part_B.ipynb
@@ -123,7 +123,7 @@
     "# it is a naive implementation w/o any smartness,\n",
     "# just administration\n",
     "\n",
-    "function graph_col_bt(G::Vector{Vector{Int}},maxcol::Int) # max number of colors\n",
+    "function graphcol_bt(G::Vector{Vector{Int}},maxcol::Int) # max number of colors\n",
     "# the actual color are in 1..maxcol\n",
     "  N=length(G)\n",
     "  \n",
@@ -182,7 +182,7 @@
     "# a method (variant) that takes a Graph() instance and returns a similar\n",
     "# object that is returned by Graphs.random_greedy_color\n",
     "# (imitating by namedtuple)\n",
-    "function graph_col_bt(G::Graph,maxcol::Int) # max number of colors\n",
+    "function graphcol_bt(G::Graph,maxcol::Int) # max number of colors\n",
     "  GG=[Int[] for n in 1:nv(G)]\n",
     "  for e in edges(G)\n",
     "    a,b=src(e),dst(e)\n",
@@ -216,8 +216,8 @@
     }
    ],
    "source": [
-    "@time the_coloring=graph_col_bt(G,9);println(the_coloring)\n",
-    "@time failed=graph_col_bt(G,8);println(failed)\n",
+    "@time the_coloring=graphcol_bt(G,9);println(the_coloring)\n",
+    "@time failed=graphcol_bt(G,8);println(failed)\n",
     "\n",
     "\n",
     "# on my machine it takes ~10 sec to compute the 9 coloring, \n",
