--- a/graphcol_bt/part_A.ipynb
+++ b/graphcol_bt/part_A.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Asztal/git/notebooks/graphcol-bt`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Asztal/git/notebooks/graphcol_bt`\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "hispanic-category",
    "metadata": {},
    "outputs": [
@@ -112,16 +112,16 @@
      "output_type": "stream",
      "text": [
       "11 20\n",
-      "  0.001159 seconds (13.00 k allocations: 890.797 KiB)\n"
+      "  0.112528 seconds (88.19 k allocations: 5.902 MiB, 99.14% compilation time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Graphs.Coloring{Int64}(4, [1, 2, 4, 2, 3, 1, 2, 1, 2, 1, 3])"
+       "Graphs.Coloring{Int64}(4, [2, 1, 2, 4, 3, 2, 1, 2, 1, 1, 3])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "designing-inventory",
    "metadata": {},
    "outputs": [
@@ -145,16 +145,16 @@
      "output_type": "stream",
      "text": [
       "25 160\n",
-      "  0.003607 seconds (27.00 k allocations: 2.228 MiB)\n"
+      "  0.003870 seconds (27.00 k allocations: 2.228 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Graphs.Coloring{Int64}(5, [5, 2, 3, 4, 1, 4, 1, 5, 2, 3  …  1, 5, 2, 3, 4, 3, 4, 1, 5, 2])"
+       "Graphs.Coloring{Int64}(5, [1, 3, 2, 4, 5, 2, 4, 5, 1, 3  …  3, 2, 4, 5, 1, 4, 5, 1, 3, 2])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "renewable-chemistry",
    "metadata": {},
    "outputs": [
@@ -180,16 +180,16 @@
      "output_type": "stream",
      "text": [
       "128 2113\n",
-      "  0.029174 seconds (130.00 k allocations: 24.659 MiB)\n"
+      "  0.043442 seconds (130.00 k allocations: 24.659 MiB, 25.28% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Graphs.Coloring{Int64}(32, [11, 17, 12, 11, 8, 12, 1, 4, 2, 28  …  9, 13, 3, 6, 27, 13, 22, 6, 1, 18])"
+       "Graphs.Coloring{Int64}(32, [2, 6, 11, 1, 4, 4, 18, 24, 5, 7  …  3, 11, 5, 11, 4, 12, 1, 17, 18, 25])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "provincial-qualification",
    "metadata": {},
    "outputs": [
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "496 11654\n",
-      "  0.369822 seconds (498.00 k allocations: 276.920 MiB, 19.77% gc time)\n"
+      "  0.196557 seconds (498.00 k allocations: 276.920 MiB, 14.32% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Graphs.Coloring{Int64}(65, [13, 23, 15, 26, 17, 3, 19, 22, 21, 20  …  1, 1, 1, 2, 5, 1, 1, 1, 1, 1])"
+       "Graphs.Coloring{Int64}(65, [17, 24, 10, 11, 20, 5, 15, 12, 19, 22  …  1, 1, 1, 12, 1, 1, 1, 1, 1, 7])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
     "#### conclusion\n",
     "* for the inspected instances `Graphs.random_greedy_color` is very \n",
     "  effective\n",
-    "* do we need an exact solver?"
+    "* do we need an exact solver at all? :-)"
    ]
   }
  ],
